force-app/main/default/objects/Merchandise__c/Merchandise__c.object-meta.xml
<CustomObject>
    <description>Merchandise contains various product like food,clothes,goods,electronics,raw materilals</description>
    <label>Merchandise</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>