force-app/main/default/objects/Merchandise__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>This field regarding a price of Merchandise</description>
    <inlineHelpText>The price of Merchandise</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>