force-app/main/default/objects/Merchandise__c/fields/Total_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory__c</fullName>
    <description>This field contains total amount</description>
    <inlineHelpText>total amount of Merchandise</inlineHelpText>
    <label>Total Inventory</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>